# EE344

./: .gitignore  README.md  cr_ie_info.json
CAD/: box final final.dxf
Software/: MongoDB_datascrap.py  central_unit.py  readings.csv  sample_code.py  sample_waveform.txt  shlesh_code.py  test_tcp_client.py  test_tcp_server.py  waveform_plot.py
Software/ADE9000API_web/ADE9000API/: ADE9000API.h
Software/ADE9000_RP2040/: ADE9000API_RP2040.h  main.c
Software/Example Codes/: ADE9000Calibration.ino
Software/Example Codes/ADE9000API_Test/: ADE9000API.cpp  ADE9000API_Test.ino
Software/RP2040_code/: ADE9000API_RP2040.c  ADE9000API_RP2040.h  ADE9000RegMap.h  CMakeLists.txt  blocking.c  blocking.h  bme280.c  bme280.h  lwipopts.h  main.c  memmap_custom.ld  tcp_server.h  tcp_server_new.c
Software/RP2040_code/boschAPI/: bme280.c  bme280.h  bme280_defs.h  common.c  common.h
Software/Readings/: BME280.csv  WaveformData.csv  sample_data.csv
Software/arduino_code/ADE9000API_Test/: ADE9000API.cpp  ADE9000API.h  ADE9000API_Test.ino
TUE-01-M3/: energy_meter.kicad_pcb  energy_meter.kicad_prl  energy_meter.kicad_sch  energy_meter_laser_cutting.dxf  fp-info-cache  fp-lib-table
TUE-01-M3/Libraries/24LC32A_SN/: 24LC32A_SN.mod
TUE-01-M3/Libraries/ADP122AUJZ-3.3-R7/: ADP122AUJZ-3.3-R7.mod  ADP122AUJZ-3.3-R7.stp
TUE-01-M3/Libraries/ADUM4151BRIZ/: ADUM4151BRIZ.dcm  ADUM4151BRIZ.lib  ADUM4151BRIZ.mod
TUE-01-M3/Libraries/ADUM6404ARIZ/: ADUM6404ARIZ.dcm  ADUM6404ARIZ.stp  SOIC127P1032X265-16N.kicad_mod
TUE-01-M3/Libraries/T60404E4626X502/: T60404-E4626-X502.kicad_sym  T60404-E4626-X502.mod
TUE-01-M3/Libraries/ade9000/: 2024-02-20_08-45-26.kicad_sym
TUE-01-M3/Libraries/microUSB/: ZX62-AB-5PA_31_.kicad_sym
Test/: SensorData.csv  sample_bme280.csv
Website/: README.md  style.css  waveform.html
central_unit/: central_unit.kicad_pcb  central_unit.kicad_prl  central_unit.kicad_pro  central_unit.kicad_sch  fp-info-cache  fp-lib-table  sym-lib-table
central_unit/Libraries/RPi_Pico/: RPi_Pico.kicad_sym
central_unit/Libraries/extras/: Charleslabs_Parts.kicad_sym
central_unit/Libraries/microUSB/: ZX62-AB-5PA_31_.mod  ZX62AB5PA31.kicad_mod
energy_meter/: #auto_saved_files#  _autosave-central.kicad_sch  _autosave-energy_meter.kicad_pcb  central.kicad_sch  central_unit.kicad_sch  energy_meter.csv  energy_meter.kicad_pcb  energy_meter.kicad_prl  energy_meter.kicad_pro  energy_meter.kicad_sch  energy_meter.xml  energy_meter2.kicad_sch  fp-info-cache  fp-lib-table  sym-lib-table  ~energy_meter.kicad_sch.lck
energy_meter/Libraries/24LC32A_SN/: 24LC32A_SN.dcm  24LC32A_SN.kicad_sym  24LC32A_SN.lib  24LC32A_SN.stp  SOIC127P600X175-8N.kicad_mod
energy_meter/Libraries/ADP122AUJZ-3.3-R7/: ADP122AUJZ-3.3-R7.dcm  ADP122AUJZ-3.3-R7.lib  ADP122AUJZ-3_3-R7.kicad_sym  SOT95P280X100-5N.kicad_mod
energy_meter/Libraries/ADUM4151BRIZ/: ADUM4151BRIZ.kicad_sym  ADUM4151BRIZ.stp  SOIC127P1031X264-20N.kicad_mod
energy_meter/Libraries/ADUM6404ARIZ/: ADUM6404ARIZ.kicad_sym  ADUM6404ARIZ.lib  ADUM6404ARIZ.mod
energy_meter/Libraries/BME280_breakout/: BME280_breakout.kicad_sym
energy_meter/Libraries/MMBD4148SE/: SOT-23_TO-236__318-AT_OSI.step
energy_meter/Libraries/SN74LV4T125PWR/: 2024-03-02_16-57-56.kicad_sym
energy_meter/Libraries/T60404E4626X502/: T60404-E4626-X502.dcm  (+3 more)
(+24 files in other folders)
